--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .nav-li {
+    @apply flex w-full leading-relaxed font-josefin font-light list-none uppercase focus:outline-none  py-2 tracking-widest opacity-50 hover:opacity-100 transition-all duration-200 ease-in-out;
+  }
+}
+
+@layer components {
+  .nav-link {
+    @apply h-full w-full py-2 text-3xl text-white;
+  }
+}
+
 @layer utilities {
   .nav::after {
     @apply content-[''] bg-white h-[2px] w-[0%] left-[50%] -translate-x-[50%] -translate-y-[50%] -bottom-[5px] rounded-xl absolute duration-300;
