working on the second section

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,7 @@
 
 @layer components {
   .nav-li {
-    @apply flex w-full leading-relaxed font-josefin font-light list-none uppercase focus:outline-none  py-2 tracking-widest opacity-50 hover:opacity-100 transition-all duration-200 ease-in-out;
+    @apply flex w-full leading-relaxed font-josefin font-light list-none uppercase focus:outline-none  py-2 tracking-widest opacity-100 transition-all duration-200 ease-in-out;
   }
 }
 
