working on the card component

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,27 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  .about-section {
+    @apply grid gap-8
+    sm:px-4 sm:py-24
+    md:px-8
+    lg:px-[10%] lg:py-16 lg:grid-cols-8 lg:grid-rows-4 lg:gap-0
+    xl:grid-rows-3;
+  }
+
+  .about-img {
+    @apply lg:row-start-1 lg:row-end-4 lg:col-start-1 lg:col-end-8;
+  }
+
+  .about-content {
+    @apply text-center bg-white
+    sm:text-center
+    lg:row-start-2  lg:row-end-5 lg:col-start-3 lg:col-end-9 lg:p-16 lg:text-left
+    xl:row-start-2 xl:row-end-4 xl:col-start-5;
+  }
+}
+
 @layer components {
   .nav-li {
     @apply flex w-full leading-relaxed font-josefin font-light list-none uppercase focus:outline-none  py-2 tracking-widest opacity-100 transition-all duration-200 ease-in-out;
